[project]
name = "nl-pddlgym"
version = "0.0.1"
description = "NL to PDDL dataset package with corresponding gym environments based on pddlgym"
license-files = [
    "LICENSE*",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.2.1",
    "gymnasium>=1.0.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pillow>=8",
    "scikit-image>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty>=0.0.55",
    "pre-commit>=4.4.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nl_pddlgym"
module-root = ""
source-exclude = [
    "nl_pddlgym/demo*.py",
    "nl_pddlgym/procedural_generation/**",
]
